force-app/main/default/objects/Engagement_Title_Rate_Sheet__c/Engagement_Title_Rate_Sheet__c.object-meta.xml
<CustomObject>
    <description>Engagement Title Rate Sheets: Junction Object between Engagements and Title Rate Sheets.  Used by the FAS Litigation (Dispute Resolution Consulting) Group</description>
    <label>Engagement Title Rate Sheet</label>
    <nameField>
        <label>Engagement Title Rate Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Title Rate Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>