force-app/main/default/objects/Engagement_Title_Rate_Sheet__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date for the Rate Sheet</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>