force-app/main/default/objects/Engagement_Title_Rate_Sheet__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <description>Related Engagement Record</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Engagement Title Rate Sheets</relationshipLabel>
    <relationshipName>Engagement_Title_Rate_Sheets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>