force-app/main/default/objects/Engagement_Title_Rate_Sheet__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Rate Sheet Start Date</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>