force-app/main/default/objects/Engagement_Title_Rate_Sheet__c/fields/Title_Rate_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Title_Rate_Sheet__c</fullName>
    <description>Related Title Rate Sheet Record</description>
    <label>Title Rate Sheet</label>
    <referenceTo>Title_Rate_Sheet__c</referenceTo>
    <relationshipLabel>Engagement Title Rate Sheets</relationshipLabel>
    <relationshipName>Engagement_Title_Rate_Sheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>